--- a/locale/locale_en-US.ini
+++ b/locale/locale_en-US.ini
@@ -8,3 +8,4 @@ tag_line = A high productive and modular web framework in Go.
 minimal_example = Minimal Example
 group_routing = Group Routing
 easy_templating = Easy Templating
+localization = Localization
